--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="nadpisy">
       <h1>Fine dining</h1>
       <p>Tam, kde jídlo spojuje</p>
     </header>
-    <div class="galerie">
+    <div class="kontejner">
       <div class="foto"><img src="images/dish-01.jpg" alt="Omg, pes!" /></div>
       <div class="foto"><img src="images/dish-02.jpg" alt="Omg, pes!" /></div>
       <div class="foto"><img src="images/dish-03.jpg" alt="Omg, pes!" /></div>
